<resources>
    <string name="txt_formore">More_For_Detail</string>
    <string name="txt_strategy">Stategy Alternatives</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">Smart Home Energy Saving</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Mannually Connect</string>
    <string name="title_activity_connecting">Human Behavior Analysis</string>
    <string name="title_connect_fail">Connect fail!</string>
    <string name="content_connect_fail">Please check the input, or the meter is out of service!</string>
    <string name="title_activity_menu">Smart Home Energy Saving</string>
    <string name="title_activity_passwd">Password Risk Analysis</string>
    <string name="title_activity_modifyparameter">Parameter Risk Analysis</string>
    <string name="title_activity_iplist">MainActivity</string>
    <string name="title_activity_scan">Scan Meter</string>
    <string name="title_activity_modify_para">Parameter Risk Analysis</string>
    <string name="title_activity_gepasswd">Password Risk Analysis</string>
    <string name="title_activity_father">FatherActivity</string>
    <string name="title_activity_load_check">Non-intrusive monitoring</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_modify_sqldata">Modify LoadInfo</string>
    <string name="title_activity_show_sqldata">Add Load Characteristic Detail</string>
    <string name="title_activity_show_sql">LoadInfo Lib</string>
    <string name="title_activity_maintain">MaintainActivity</string>
    <string name="title_activity_show_harmonic_current">ShowHarmonicCurrentActivity</string>
    <string name="CurrBasicUnit">A</string>
    <string name="harCurA1">Har_Cur_a_1</string>
    <string name="harCurB1">Har_Cur_b_1</string>
    <string name="harCurC1">Har_Cur_c_1</string>
    <string name="harCurA3">Har_Cur_a_3</string>
    <string name="harCurB3">Har_Cur_b_3</string>
    <string name="harCurC3">Har_Cur_c_3</string>
    <string name="harCurA5">Har_Cur_a_5</string>
    <string name="harCurB5">Har_Cur_b_5</string>
    <string name="harCurC5">Har_Cur_c_5</string>
    <string name="harCurInfo">Har_Cur_Info</string>
    <string name="harCurInfo1st">Har_Cur_Info_1st</string>
    <string name="harCurInfo3th">Har_Cur_Info_3th</string>
    <string name="harCurInfo5th">Har_Cur_Info_5th</string>
    <string name="title_activity_show_log">Saved Data</string>
    <string name="action_settings">Settings</string>
    <string name="hint_lasttime">Input Start Point</string>
    <string name="unit_hour">Hour</string>
    <string name="hint_loginfo">Log Info</string>
    <string name="button_getlog">Import Meter Log</string>
    <string name="button_log">Lookup Meter Log</string>
    <string name="meterip">192.168.1.118</string>
    <string name="button_seeklogdb">Import DB</string>
    <string name="button_clear">ClR DB</string>
    <string name="title_activity_load_list">Off-Line Results</string>
    <string name="title_activity_his_achart">HisAChartActivity</string>
    <string name="button_ret2log">Return to Menu</string>
    <string name="button_into_Achart">Lookup Curve</string>
    <string name="hint_loadlist">Load Lists</string>
    <string name="title_activity_log_event_show">OffLine Load Log</string>
    <string name="title_activity_get_real_time_price">HouseElec Opt</string>
    <string name="title_activity_real_time_price">HouseElec Opt</string>
    <string name="button_gain_realtime_price">Get E-Price</string>
    <string name="title_activity_optimize">OtherAppliance Opt</string>
    <string name="txt_starttime">StartTime：</string>
    <string name="txt_endtime">EndTime：</string>
    <string name="button_cal">Cal Schema</string>
    <string name="txt_interupt">Interruptable</string>
    <string name="txt_noninterupt">NonInterruptable</string>
    <string name="hint_eventlist">Events List</string>
    <string name="txt_2loadlist">Lookup Lists</string>
    <string name="txt_device_style">Device Type：</string>
    <string name="txt_duration">Duration</string>
    <string name="button_optimize">ToOpt</string>
    <string name="title_activity_partion_time_price">PartionTimePriceActivity</string>
    <string name="txt_partion_start">分段开始时间</string>
    <string name="txt_partion_price">分段电价</string>
    <string name="txt_partion_endtime">分段终止时间</string>
    <string name="button_add">添加分段</string>
    <string name="title_activity_water_heater_optimzie">Load Scheduling</string>
    <string name="txt_hint_time">First:Select Time Range</string>
    <string name="button_confirm">Confirm</string>
    <string name="txt_hint_target">Second：Select Temprature</string>
    <string name="txt_hint_duration">Third:Input duration</string>
    <string name="button_waterheater">ToWHOpt</string>
    <string name="txt_optimize">WHOpt</string>
    <string name="button_duration">Cal Schema</string>
    <string name="hint_bath">Hint:From 0:00 to 23:00</string>
    <string name="hint_bathhour">Hint：From 0:00 to 23:00</string>
    <string name="hint_timerange">Please input possible minimum start use time 0 to 23</string>
    <string name="title_activity_air_conditioner">AC Opt</string>
    <string name="button_offlinecheck">OffLine Events</string>
    <string name="button_startoptimze">StartOpt</string>
    <string name="hint_input_settemprature">Set Temprature</string>
    <string name="unit_war">W</string>
    <string name="txt_appliancepower">Appliance Active Power</string>
    <string name="txt_realtimeprice">RealTime Price List</string>
    <string name="txt_certainregion">Region：</string>
    <string name="sql_add">Add</string>
    <string name="sql_delete">Delete</string>
    <string name="sql_modify">Modify</string>
    <string name="sql_record_detail">LoadInfo Detail</string>
    <string name="sqlmod_registerid">Registered ID</string>
    <string name="modsql_loadname">Name</string>
    <string name="modsql_ap_lowbound">Ap low</string>
    <string name="modsql_ap_up">Ap up</string>
    <string name="modsql_rp_lowbound">Rp low</string>
    <string name="modsql_rp_up">Rp up</string>
    <string name="hint_sql">Hint：Rp is negative，\need input positive integer</string>
    <string name="connect_inputmannually">Mannual Input Info To Conn</string>
    <string name="scan_from">Scan meter ，from ip:</string>
    <string name="to">to </string>
    <string name="toip">to ip:</string>
    <string name="button_stimuli">Imitate Import</string>
    <string name="ipaddr">IP Addr</string>
    <string name="metertype">Meter Type</string>
    <string name="CnnStatus">Cnn Status</string>
    <string name="Start">Start</string>
    <string name="ScanMeter">Scan Meter</string>
    <string name="MeterAddr">Meter Addr</string>
    <string name="Port">Port</string>
    <string name="HostIP">Host IP</string>
    <string name="MeterType">Meter Type</string>
    <string name="Stop">Stop</string>
    <string name="Connect">Connect</string>
    <string name="Return">Return</string>
    <string name="Return2Menu">Return to Menu</string>
    <string name="MeterList">Meter List:</string>
    <string name="warn_cannot_reach_net">Warn:Cannot reach the network</string>
    <string name="confirm_network">Network is Ok to get RealTime E-Price</string>
    <string name="menu_hardset">Hard-Set</string>
    <string name="menu_aboutus">About Us</string>
    <string name="title_activity_zhu_chart">用户行为分析</string>
    <string name="title_activity_table_show">TableShow</string>
    <string name="title_activity_curve">Curve</string>
    <string name="title_activity_per_month">PerMonthActivity</string>
    <string name="title_activity_scheduling_chart">SchedulingChart</string>
    <string name="title_activity_pine_chart">PineChart</string>
    <string name="action_dynamic_price">Dynamic-Price</string>
    <string name="action_tin">Indoor-Temprature</string>
    <string name="action_HBA">HBA</string>
    <string name="action_EnergyDivision">Energy Division</string>
    <string name="action_EnergyConsumption">Energy Consuption</string>
    <string name="unit_centigrade">℃</string>
    <string name="action_acschedulingdetail">ACSchedulingDetail</string>
    <string name="title_activity_wh">WHActivity</string>
    <string name="txt_temprature">setTemprature</string>
    <string name="txt_needtime">Bathtime</string>
    <string name="txt_bathtime">BathTime</string>
    <string name="btn_opt">WH Optimization</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="txt_expanse">开销</string>
    <string name="txt_electric_cost">电费</string>
    <string name="txt_electric_consumption">用电量</string>
    <string name="txt_carbon_dioxide">C02排放量</string>
    <string name="txt_former_month">上月</string>
    <string name="txt_current_month">本月</string>
    <string name="title_activity_electrical_statistics">Aking家的用电统计</string>
    <string name="title_activity_my_action_bar">MyActionBarActivity</string>
    <string name="title_activity_event_detection">最新事件</string>
    <string name="hint_time">时间</string>
    <string name="alarm_clock">闹钟</string>
    <string name="weibo">微博</string>
    <string name="hand_ring">手环</string>
    <string name="gps">GPS</string>
    <string name="api_bai_du_map">百度地图</string>
    <string name="water_heater">热水器</string>
    <string name="air_conditioner">空调</string>
    <string name="music">音乐</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="electrical_consumption">用电量</string>
    <string name="electrical_cost">电费</string>
    <string name="unit_electrical_cost">单位电价</string>
    <string name="carbon_dioxide_emission">CO2排放</string>
    <string name="hint_comparison_last_year">同比去年同月</string>
    <string name="hint_comparison_last_month">同比上个月</string>
    <string name="hint_overall_level">总体水平</string>
    <string name="hint_beat_xxx_users">击败了XXX的用户</string>
    <string name="hint_increase">增加</string>
    <string name="hint_decrease">减少</string>
    <string name="unit_percent">%</string>
    <string name="title_bar_chart_consumption">用电量（KWH）</string>
    <string name="last_year">2014-04</string>
    <string name="last_month">2015-03</string>
    <string name="current_month">2015-04</string>
    <string name="your_home">您家</string>
    <string name="warm_hints">温馨提示</string>
    <string name="title_activity_electrical_statistics_activity2">ElectricalStatisticsActivity2</string>
    <string name="unit_electrical_price">元</string>
    <string name="unit_electrical_consumption">Kwh</string>
    <string name="unit_e_price_per_kwh">元/Kwh</string>
    <string name="unit_co2_emission">Kg</string>
    <string name="event_description">事件描述：</string>
    <string name="event_source">事件来源：</string>
    <string name="linked_devices">联动设备：</string>
    <string name="lamp">灯</string>
    <string name="awake_description">检测到用户起床活动</string>
    <string name="go_out_home">用户离开住址，前往办公室</string>
    <string name="traffic_jam">前往办公室途中交通拥堵，预计到达时间9:10 AM</string>
    <string name="social_plan_sports">用户发状态，预计下午会进行运动</string>
    <string name="play_sports">用户正在进行运动中</string>
    <string name="simple_awake">起床</string>
    <string name="simple_go_out_home">出家门</string>
    <string name="simple_traffic_jam">堵车</string>
    <string name="indoor_temperature">室温：</string>
    <string name="humidity">湿度：</string>
    <string name="former_setting">原设置</string>
    <string name="current_setting">当前设置</string>
    <string name="mode">模式：</string>
    <string name="start_time">启动时间：</string>
    <string name="current_status">当前状态</string>
    <string name="setting_temperature">设定温度：</string>
    <string name="ac_mode_cold"> 制冷</string>
</resources>