<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowLogActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_hint_settime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_lasttime" />

            <EditText
                android:id="@+id/editText_hint_log_lasttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_hour" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp" >

            <Button
                android:id="@+id/button_getlog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_getlog" />

            <Button
                android:id="@+id/button_infromlogdb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_seeklogdb" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_clear" />

        </TableRow>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---------------------------------------"
            android:textSize="@dimen/padding_large" />

        <Button
            android:id="@+id/button_stimuli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_stimuli" />

        <Button
            android:id="@+id/button_offlinecheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_offlinecheck" />

        <Button
            android:id="@+id/button1_intoAchart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/button_into_Achart" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---------------------------------------"
            android:textSize="@dimen/padding_large" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/hint_loginfo"
            android:textSize="@dimen/padding_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listView_detaillist"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scrollingCache="true" >
            </ListView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
